--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,34 +1,43 @@
 apply plugin: 'com.android.application'
 buildscript {
     repositories {
-        maven { url 'https://maven.fabric.io/public' }
         jcenter()
         mavenCentral()
-        google();
+        google() // Google's Maven repository
+        maven { url "https://jitpack.io" }
     }
 
     dependencies {
-        classpath 'io.fabric.tools:gradle:1.29.0'
+        /* classpath 'io.fabric.tools:gradle:1.29.0'*/
+        classpath 'com.google.gms:google-services:4.3.4'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.4.1'
+        classpath 'com.android.tools.build:gradle:4.1.1'
     }
 }
-
 apply plugin: 'com.android.application'
-apply plugin: 'io.fabric'
+
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
+apply plugin: 'com.android.application'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
 }
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId "com.romerock.apps.utilities.cryptocurrencyconverter"
         minSdkVersion 21
-        targetSdkVersion 28
-        versionCode 100700
-        versionName "1.7"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        targetSdkVersion 29
+        versionCode 100800
+        versionName "1.8"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         multiDexEnabled false
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     buildTypes {
         release {
@@ -52,16 +61,16 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.0'
-    implementation 'com.android.support:support-v4:27.1.0'
-    implementation 'com.android.support:design:27.1.0'
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.jakewharton:butterknife:10.0.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     implementation 'com.airbnb.android:lottie:2.5.1'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.github.orangegangsters:swipy:1.2.3@aar'
@@ -78,22 +87,30 @@ dependencies {
     implementation "me.leolin:ShortcutBadger:1.1.21@aar"
     implementation 'com.wdullaer:materialdatetimepicker:3.5.1'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.12'
-    implementation('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
-        transitive = true;
-    }
+
     implementation 'com.google.android.support:wearable:2.3.0'
     implementation 'com.google.gms:google-services:3.3.0'
     implementation 'com.google.android.gms:play-services-wearable:15.0.1'
-    implementation 'com.android.support:support-v13:27.1.0'
+    implementation 'androidx.legacy:legacy-support-v13:1.0.0'
     implementation 'com.applovin:applovin-sdk:8.0.2'
     implementation 'com.google.ads.mediation:applovin:8.0.2.0'
     implementation 'com.inmobi.monetization:inmobi-ads:7.1.1'
     implementation 'com.google.ads.mediation:inmobi:7.1.1.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'com.android.support:recyclerview-v7:27.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.facebook.android:audience-network-sdk:4.28.2'
     implementation 'com.google.ads.mediation:facebook:4.28.2.0'
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
     implementation 'com.google.android.ads:mediation-test-suite:0.9.0'
+    implementation platform('com.google.firebase:firebase-bom:26.2.0')
+
+    // Declare the dependencies for the Crashlytics and Analytics libraries
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-crashlytics'
+    implementation 'com.google.firebase:firebase-analytics'
+
+
+
+
 }
-apply plugin: 'com.google.gms.google-services'
+
