--- a/app/build.gradle
+++ b/app/build.gradle
@@ -149,7 +149,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
     implementation 'com.google.android.ads:mediation-test-suite:0.9.0'
     implementation platform('com.google.firebase:firebase-bom:26.2.0')
-
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     // Declare the dependencies for the Crashlytics and Analytics libraries
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-crashlytics'
