--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,7 +75,8 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustPan|stateAlwaysHidden"/>
+            android:windowSoftInputMode="adjustPan|stateAlwaysHidden"
+            android:exported="true"/>
             <!--android:windowSoftInputMode="stateAlwaysHidden|adjustResize"-->
         <activity
             android:name="com.romerock.apps.utilities.cryptocurrencyconverter.DetailsActivity"
@@ -83,28 +84,36 @@
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateAlwaysHidden" />
+            android:windowSoftInputMode="stateAlwaysHidden"
+            android:exported="true"/>
         <activity
             android:name="com.romerock.apps.utilities.cryptocurrencyconverter.CurrencyActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateAlwaysHidden" />
+            android:windowSoftInputMode="stateAlwaysHidden"
+            android:exported="true"/>
         <activity
             android:name="com.romerock.apps.utilities.cryptocurrencyconverter.LanguageSettingsActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustResize" />
+            android:windowSoftInputMode="adjustResize"
+            android:exported="true"/>
         <activity
             android:name="com.romerock.apps.utilities.cryptocurrencyconverter.SetupPushNotificationsActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateAlwaysHidden" />
+            android:windowSoftInputMode="stateAlwaysHidden"
+            android:exported="true"/>
+
+        <meta-data
+            android:name="com.google.android.play.billingclient.version"
+            android:value="6.0.0" />
 
         <meta-data
             android:name="preloaded_fonts"
@@ -130,7 +139,8 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateAlwaysHidden" />
+            android:windowSoftInputMode="stateAlwaysHidden"
+            android:exported="true"/>
 
         <service android:name="com.romerock.apps.utilities.cryptocurrencyconverter.services.FirebaseInstanceIDService"
             android:exported="false">
@@ -155,7 +165,8 @@
         <activity
             android:name="com.facebook.FacebookActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="true"/>
 
         <activity
             android:name="com.inmobi.rendering.InMobiAdActivity"
@@ -163,7 +174,8 @@
             android:hardwareAccelerated="true"
             android:resizeableActivity="false"
             android:theme="@android:style/Theme.NoTitleBar"
-            tools:ignore="UnusedAttribute" />
+            tools:ignore="UnusedAttribute"
+            android:exported="true"/>
 
         <receiver
             android:name="com.inmobi.commons.core.utilities.uid.ImIdShareBroadCastReceiver"
