--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'com.android.application'
+//apply plugin: 'com.android.application'
 buildscript {
     repositories {
         mavenCentral()
@@ -9,16 +9,21 @@ buildscript {
 
     dependencies {
         /* classpath 'io.fabric.tools:gradle:1.29.0'*/
-        classpath 'com.google.gms:google-services:4.4.0'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.9'
-        classpath 'com.android.tools.build:gradle:8.3.0'
+        classpath 'com.google.gms:google-services:4.4.2'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:3.0.2'
+        classpath 'com.android.tools.build:gradle:8.3.2'
     }
 }
-apply plugin: 'com.android.application'
+/*apply plugin: 'com.android.application'
 
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.application'*/
+plugins {
+    id 'com.android.application'
+    // Make sure that you have the Google services Gradle plugin
+    id 'com.google.gms.google-services'
+}
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
@@ -26,13 +31,12 @@ repositories {
 
 android {
     compileSdkVersion 34
-    buildToolsVersion "34"
     defaultConfig {
         applicationId "com.romerock.apps.utilities.cryptocurrencyconverter"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 34
-        versionCode 1009009
-        versionName "1.9.09"
+        versionCode 1009010
+        versionName "1.9.10"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         multiDexEnabled false
     }
@@ -112,61 +116,65 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'com.jakewharton:butterknife:10.0.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    implementation 'com.airbnb.android:lottie:2.5.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'com.jakewharton:butterknife:10.2.3'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    testImplementation 'junit:junit:4.13.2'
+    implementation 'com.airbnb.android:lottie:3.0.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.github.orangegangsters:swipy:1.2.3@aar'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
     implementation 'com.facebook.android:facebook-share:8.1.0'
-    implementation('com.twitter.sdk.android:twitter:2.3.2@aar') {
+    implementation('com.twitter.sdk.android:twitter:3.3.0@aar') {
         transitive = true;
     }
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
-    implementation 'com.google.firebase:firebase-auth:16.0.3'
-    implementation 'com.google.firebase:firebase-database:16.0.1'
-    implementation 'com.google.firebase:firebase-core:16.0.3'
-    implementation 'com.google.firebase:firebase-messaging:17.3.0'
+    implementation 'com.google.firebase:firebase-auth:23.0.0'
+    implementation 'com.google.firebase:firebase-database:21.0.0'
+    implementation 'com.google.firebase:firebase-core:21.1.1'
+    implementation 'com.google.firebase:firebase-messaging:24.0.0'
     implementation "me.leolin:ShortcutBadger:1.1.21@aar"
-    implementation 'com.wdullaer:materialdatetimepicker:3.5.1'
+    implementation 'com.wdullaer:materialdatetimepicker:3.6.1'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.12'
 
-    compileOnly 'com.google.android.wearable:wearable:2.3.0'
-    implementation 'com.google.android.support:wearable:2.3.0'
-    implementation 'com.google.gms:google-services:3.3.0'
-    implementation 'com.google.android.gms:play-services-wearable:18.1.0'
+    compileOnly 'com.google.android.wearable:wearable:2.9.0'
+    implementation 'com.google.android.support:wearable:2.9.0'
+    implementation 'com.google.gms:google-services:4.4.2'
+    implementation 'com.google.android.gms:play-services-wearable:18.2.0'
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
-    implementation 'com.applovin:applovin-sdk:8.0.2'
-    implementation 'com.google.ads.mediation:applovin:8.0.2.0'
-    implementation 'com.inmobi.monetization:inmobi-ads:7.1.1'
-    implementation 'com.google.ads.mediation:inmobi:7.1.1.0'
-    implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'com.facebook.android:audience-network-sdk:4.28.2'
-    implementation 'com.google.ads.mediation:facebook:5.2.0.1'
-    implementation 'com.google.android.ads:mediation-test-suite:0.9.0'
-    implementation platform('com.google.firebase:firebase-bom:26.2.0')
+    implementation 'com.applovin:applovin-sdk:12.5.0'
+    implementation 'com.google.ads.mediation:applovin:12.5.0.1'
+    //implementation 'com.inmobi.monetization:inmobi-ads:7.1.1'
+    implementation 'com.google.ads.mediation:inmobi:10.7.4.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    implementation 'com.facebook.android:audience-network-sdk:6.17.0'
+    implementation 'com.google.ads.mediation:facebook:6.17.0.0'
+    implementation 'com.google.android.ads:mediation-test-suite:3.0.0'
+    implementation platform('com.google.firebase:firebase-bom:33.1.2')
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     // Declare the dependencies for the Crashlytics and Analytics libraries
     // When using the BoM, you don't specify versions in Firebase library dependencies
-    implementation 'com.google.firebase:firebase-crashlytics:18.4.0'
+    implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-analytics'
-    implementation 'androidx.work:work-runtime:2.7.1'
-    implementation 'com.google.android.gms:play-services-ads:17.2.0'
-    implementation "com.android.billingclient:billing:6.2.0"
+    implementation 'com.google.firebase:firebase-iid:21.1.0'
+    implementation 'androidx.work:work-runtime-ktx:2.9.0'
+    implementation 'com.google.android.gms:play-services-ads:23.2.0'
+    //implementation 'com.google.android.gms:play-services-ads-identifier:18.1.0'
+    //implementation 'com.google.android.gms:play-services-ads-lite:17.5.0'
+    implementation "com.android.billingclient:billing:7.0.0"
     implementation('com.crashlytics.sdk.android:crashlytics:2.10.1@aar') {
         transitive = true;
     }
 }
+
 
 tasks.withType(JavaCompile).configureEach{
     options.fork = true
