--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,14 +36,14 @@ allprojects {
 }
 
 android {
-    compileSdkVersion 34
+    compileSdkVersion 35
     defaultConfig {
         applicationId "com.romerock.apps.utilities.cryptocurrencyconverter"
         minSdkVersion 23
-        targetSdkVersion 34
-        versionCode 1009011
-        versionName "1.9.11"
-        compileSdkVersion 34
+        targetSdkVersion 35
+        versionCode 1009015
+        versionName "1.9.15"
+        compileSdkVersion 35
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         multiDexEnabled false
     }
@@ -128,55 +128,55 @@ dependencies {
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'com.jakewharton:butterknife:10.2.3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
     testImplementation 'junit:junit:4.13.2'
-    implementation 'com.airbnb.android:lottie:3.0.1'
+    implementation 'com.airbnb.android:lottie:6.6.0'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-    implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.11.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.orangegangsters:swipy:1.2.3@aar'
-    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
-    implementation 'com.facebook.android:facebook-share:8.1.0'
-    implementation('com.twitter.sdk.android:twitter:3.3.0@aar') {
-        transitive = true;
-    }
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.6.0'
+    implementation 'com.facebook.android:facebook-share:17.0.2'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
-    implementation 'com.google.firebase:firebase-auth:23.0.0'
+    implementation 'com.google.firebase:firebase-auth:23.1.0'
     implementation 'com.google.firebase:firebase-database:21.0.0'
     implementation 'com.google.firebase:firebase-core:21.1.1'
-    implementation 'com.google.firebase:firebase-messaging:24.0.0'
-    implementation "me.leolin:ShortcutBadger:1.1.21@aar"
-    implementation 'com.wdullaer:materialdatetimepicker:3.6.1'
+    implementation 'com.google.firebase:firebase-messaging:24.1.0'
+    implementation "me.leolin:ShortcutBadger:1.1.22@aar"
+    implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.12'
 
     compileOnly 'com.google.android.wearable:wearable:2.9.0'
     implementation 'com.google.android.support:wearable:2.9.0'
     implementation 'com.google.gms:google-services:4.4.2'
-    implementation 'com.google.android.gms:play-services-wearable:18.2.0'
+    implementation 'com.google.android.gms:play-services-wearable:19.0.0'
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
-    implementation 'com.applovin:applovin-sdk:12.5.0'
-    implementation 'com.google.ads.mediation:applovin:12.5.0.1'
+    implementation 'com.applovin:applovin-sdk:13.0.1'
+    implementation 'com.google.ads.mediation:applovin:13.0.1.0'
     //implementation 'com.inmobi.monetization:inmobi-ads:7.1.1'
-    implementation 'com.google.ads.mediation:inmobi:10.7.4.0'
+    implementation 'com.google.ads.mediation:inmobi:10.8.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'androidx.recyclerview:recyclerview:1.3.2'
-    implementation 'com.facebook.android:audience-network-sdk:6.17.0'
-    implementation 'com.google.ads.mediation:facebook:6.17.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.4.0'
+    implementation 'com.facebook.android:audience-network-sdk:6.18.0'
+    implementation 'com.google.ads.mediation:facebook:6.18.0.0'
     implementation 'com.google.android.ads:mediation-test-suite:3.0.0'
-    implementation platform('com.google.firebase:firebase-bom:33.1.2')
+    implementation platform('com.google.firebase:firebase-bom:33.7.0')
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     // Declare the dependencies for the Crashlytics and Analytics libraries
     // When using the BoM, you don't specify versions in Firebase library dependencies
-    implementation 'com.google.firebase:firebase-crashlytics:19.0.3'
+    implementation 'com.google.firebase:firebase-crashlytics:19.4.0'
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-iid:21.1.0'
-    implementation 'androidx.work:work-runtime-ktx:2.9.0'
-    implementation 'com.google.android.gms:play-services-ads:23.2.0'
+    implementation 'androidx.work:work-runtime-ktx:2.10.0'
+    implementation 'com.google.android.gms:play-services-ads:23.6.0'
     //implementation 'com.google.android.gms:play-services-ads-identifier:18.1.0'
     //implementation 'com.google.android.gms:play-services-ads-lite:17.5.0'
-    implementation "com.android.billingclient:billing:7.0.0"
+    implementation "com.android.billingclient:billing:7.1.1"
+    /*implementation('com.twitter.sdk.android:twitter:3.3.0@aar') {
+        transitive = true;
+    }*/
     /*implementation('com.crashlytics.sdk.android:crashlytics:2.10.1@aar') {
         transitive = true;
     }*/
