--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.android.vending.BILLING" />
-    <uses-permission android:name="android.permission.BODY_SENSORS" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
@@ -112,7 +111,8 @@
 
         <meta-data
             android:name="com.google.android.play.billingclient.version"
-            android:value="7.0.0" />
+            android:value="7.0.0"
+            tools:replace="android:value"/>
 
         <meta-data
             android:name="preloaded_fonts"
@@ -159,6 +159,8 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
+        <meta-data android:name="com.facebook.sdk.ClientToken" android:value="@string/facebook_app_id"/>
+
         <meta-data android:name="com.google.android.gms.version" />
 
         <activity
