--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,15 @@ ext {
 
 buildscript {
     
+    ext {
+        agp_version = '8.7.2'
+    }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.3.2'
+        classpath "com.android.tools.build:gradle:$agp_version"
         classpath 'com.google.gms:google-services:4.4.2'
     }
 }
