--- a/gradle.properties
+++ b/gradle.properties
@@ -11,10 +11,13 @@
 # https://developer.android.com/r/tools/gradle-multi-project-decoupled-projects
 # org.gradle.parallel=true
 #Wed Jul 24 10:50:01 CST 2024
+android.debug.obsoleteApi=true
 android.defaults.buildfeatures.buildconfig=true
 android.enableJetifier=true
-android.enableR8.fullMode=false
 android.nonFinalResIds=false
 android.nonTransitiveRClass=false
 android.useAndroidX=true
-org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
+org.gradle.jvmargs=-Xmx1920M \
+--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
+--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED \
+--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
